# Xenon

./: .gitignore  install.ps1  package-lock.json  setup_protoc.ps1  setup_python.ps1
functions/: import_browser.py  read_file.py  vm_shell.py  vmalloc.py  write_file.py
pages/: index.html  install.ps1
protos/: context.proto
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: ai_core.rs  ascii_gen.rs  context_translator.rs  lib.rs  main.rs  python_env.rs  vm_manager.rs
