[package]
name = "xenon"
version = "0.1.0"
description = "Xenon - Autonomous Self-Editing Agent"
authors = ["Xenon Team"]
edition = "2021"

[lib]
name = "xenon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.13"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
pyo3 = { version = "0.23", features = ["auto-initialize"] }
prost = "0.13"
prost-derive = "0.13"
anyhow = "1.0"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
image = "0.25"
tui-big-text = "0.6.0"

